--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,10 @@
   <artifactId>head_first</artifactId>
   <version>1.0</version>
 
+  <properties>
+    <jdk.version>1.8</jdk.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+  </properties>
 
 </project>
