--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <version>1.0</version>
 
   <properties>
-    <jdk.version>1.8</jdk.version>
     <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
   </properties>
